--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,22 @@
-<h1>
-  {{title}}
-</h1>
+<header>
+  <h1>
+    {{title}}
+  </h1>
+
+  <nav>
+  <ul>
+    <li><a [routerLink]="['/']">Home</a></li>
+    <li><a [routerLink]="['directory']">Directory</a></li>
+    <li><a [routerLink]="['register']">Register</a></li>
+
+    </ul>
+  </nav>
+</header>
+
+
+<section id="main">
+
+  <!--<app-home></app-home>-->
+  <router-outlet></router-outlet>
+
+</section>
